# tenns_llm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json  configuration_tenns_llm.py  convert_to_safetensors.py  modeling_tenns_llm.py  pyproject.toml  setup.sh  tenns_llm.py
